WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
29747
Load blocks during unload should not affect targeted loads
https://bugs.webkit.org/show_bug.cgi?id=29747
Summary
Load blocks during unload should not affect targeted loads
Adam Barth
Reported
2009-09-25 13:05:37 PDT
Comment #8
From Darin Fisher (:fishd, Google) 2009-09-21 00:54:16 PDT (-) [reply] Also, why is it correct to block loads made on a target that is not unloading? If the target string indicates a different top-level window (e.g., target=_blank), then why should we care if it happens during "unload" of the opener?
Attachments
Patch v1
(3.89 KB, patch)
2009-09-25 14:03 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2009-09-25 13:26:24 PDT
I have a patch that I'm building / testing now.
Adam Barth
Comment 2
2009-09-25 14:03:54 PDT
Created
attachment 40142
[details]
Patch v1
WebKit Commit Bot
Comment 3
2009-09-25 19:35:22 PDT
Comment on
attachment 40142
[details]
Patch v1 Clearing flags on attachment: 40142 Committed
r48783
: <
http://trac.webkit.org/changeset/48783
>
WebKit Commit Bot
Comment 4
2009-09-25 19:35:25 PDT
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 5
2014-06-03 14:53:31 PDT
FYI this test turned out to be very flaky, finally fixed today:
https://codereview.chromium.org/318523002
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug