2009-09-25  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        Load blocks during unload should not affect targeted loads
        https://bugs.webkit.org/show_bug.cgi?id=29747

        Test that we can follow targeted hyperlinks in an unload handler.

        * fast/loader/resources/unload-hyperlink-targeted-subframe.html: Added.
        * fast/loader/unload-hyperlink-targeted-expected.txt: Added.
        * fast/loader/unload-hyperlink-targeted.html: Added.
2009-09-25  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        Load blocks during unload should not affect targeted loads
        https://bugs.webkit.org/show_bug.cgi?id=29747

        Move the check of the unload state after checking for targeted links.

        Test: fast/loader/unload-hyperlink-targeted.html

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::loadURL):

Canonical link: https://commits.webkit.org/40346@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48783 268f45cc-cd09-0410-ab3c-d52691b4dbfc