WebCore/loader/FrameLoader.cpp
@@ -2312,9 +2312,6 @@ void FrameLoader::loadFrameRequest(const FrameLoadRequest& request, bool lockHis
 void FrameLoader::loadURL(const KURL& newURL, const String& referrer, const String& frameName, bool lockHistory, FrameLoadType newLoadType,
     PassRefPtr<Event> event, PassRefPtr<FormState> prpFormState)
 {
-    if (m_unloadEventBeingDispatched)
-        return;
-
     RefPtr<FormState> formState = prpFormState;
     bool isFormSubmission = formState;
     
@@ -2336,6 +2333,9 @@ void FrameLoader::loadURL(const KURL& newURL, const String& referrer, const Stri
         targetFrame->loader()->loadURL(newURL, referrer, String(), lockHistory, newLoadType, event, formState.release());
         return;
     }
+
+    if (m_unloadEventBeingDispatched)
+        return;
 
     NavigationAction action(newURL, newLoadType, isFormSubmission, event);
 
